# Radar-SLAM

./: .gitignore  CMakeLists.txt  README.md  build.sh  package.xml  run_batch_mulran.sh  run_batch_oxford.sh  run_batch_radiate.sh  setup.py
Example/: 00_config.yaml  01_config.yaml  02_config.yaml  03_config.yaml  Foggy6_config.yaml  Foggy9_config.yaml  config_loop.yaml  good_config_loop.yaml  good_config_loop_another.yaml  loop0_config.yaml  loop2_config.yaml  loop3_config.yaml
cmake/: FindOsmium.cmake  FindProtozero.cmake
evaluate/: SE2_to_se2.m  animate_trajectories.m  calcSequenceErrors.m  computeRelativePose6DOF.m  connect_pose_sejong.m  consistencyTestOdom.m  convert2Poses4ATE.m  errorAgainstSpeed.m  evaluate.m  evaluateORB.m  evaluateOneSequenceRadar.m  evaluateParameters.m  evaluateRadar.m  evaluateSuMa.m  generateConfigFrile.py  inverse_pose.m  lastFrameFromSegmentLength.m  log.txt  meanErrorSpeedLength.m  new_data.yml  odomParameterStudy.m  plotComputationTime.py  readGroudtruthPoses.m  readOdomORB.m  readOdomRadar.m  readOdomSuma.m  rotationError.m  run_experiments_100.sh  run_experiments_all_with_everything.sh  run_loam_experiments.sh  run_radar_experiments.sh  run_radar_our_loop.sh  run_radar_our_no_loop.sh  run_radar_oxford_loop.sh  se2_to_SE2.m  syncPoses.m  syncTranslation.m  testReverseLoop.m  trajectoryDistances.m  translationError.m  (+3 more)
launch/: radar_odom.launch
rviz_config/: RadarSLAM.rviz  config.rviz
src/: main.cpp
src/FullSystem/: Algorithms.cpp  Algorithms.h  Converter.cpp  Converter.h  EdgeSE2XYOnlyPose.cpp  EdgeSE2XYOnlyPose.h  EdgeSelfDefined.cpp  EdgeSelfDefined.h  Feature.cpp  Feature.h  FeatureTracker.cpp  FeatureTracker.h  Frame.cpp  Frame.h  KDTree.cpp  KDTree.h  KeyFrame.cpp  KeyFrame.h  LocalMapping.cpp  LocalMapping.h  LoopClosing.cpp  LoopClosing.h  Map.cpp  Map.h  MapPoint.cpp  MapPoint.h  Matcher.cpp  Matcher.h  Optimizer.cpp  Optimizer.h  System.cpp  System.h  Tracking.cpp  Tracking.h  Viewer.cpp  Viewer.h  cfar.cpp  cfar.h  main.cpp  mcqd.h
src/util/: Loader.cpp  Loader.h  mercator.cpp  mercator.h  osmParser.cpp  osmParser.h  polarToCartesian.cpp  polarToCartesian.h
testConfig/: 001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml  009.yaml  010.yaml  011.yaml  012.yaml
testConfigMulran/: DCC01.yaml  DCC02.yaml  DCC03.yaml  KAIST01.yaml  KAIST02.yaml  KAIST03.yaml  Riverside01.yaml  Riverside02.yaml  Riverside03.yaml
testConfigOxford/: 001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml
testConfigRADIATE/: fog1.yaml  fog2.yaml  heavy_snow.yaml  night.yaml  same_route_normal.yaml  same_route_rain.yaml  same_route_snow.yaml
